--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/uuid": "^9.0.1",
     "aws-cdk-lib": "2.62.2",
     "constructs": "10.1.156",
     "sst": "^2.2.8",
@@ -22,6 +23,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "axios": "^1.3.4"
+    "aws-sdk": "^2.1341.0",
+    "axios": "^1.3.4",
+    "uuid": "^9.0.0"
   }
 }
